--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,29 @@
 name: course_travel
 description: "A new Flutter project."
-publish_to: 'none'
-version: 0.1.0
+publish_to: "none"
+version: 0.1.0+1
 
 environment:
   sdk: ^3.5.2
 
 dependencies:
+  connectivity_plus: ^6.1.0
+  d_method: ^0.2.6
+  dartz: ^0.10.1
+  equatable: ^2.0.5
+  extended_image: ^9.0.4
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
+  flutter_rating_bar: ^4.0.1
+  get_it: ^8.0.1
+  google_fonts: ^6.2.1
+  http: ^1.2.2
+  intl: ^0.19.0
+  photo_view: ^0.15.0
+  shared_preferences: ^2.3.2
+  smooth_page_indicator: ^1.2.0+3
+  staggered_grid_view_flutter: ^0.0.4
 
 dev_dependencies:
   flutter_test:
